--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -18,10 +18,12 @@ jobs:
   build:
     strategy:
       matrix:
-        elixir: ['1.17.1', '1.16.3', '1.15.8', '1.14.5']
+        elixir: ['1.18.2', '1.17.1', '1.16.3', '1.15.8', '1.14.5']
         include: 
-          - elixir: '1.17.1'
-            otp: '27.0'
+          - elixir: '1.18.2'
+            otp: '27.2'
+          - elixir: '1.17.3'
+            otp: '27.2'
           - elixir: '1.16.3'
             otp: '26.2'
           - elixir: '1.15.8'
@@ -29,11 +31,11 @@ jobs:
           - elixir: '1.14.5'
             otp: '25.3'
     name: Build and test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
     - uses: actions/checkout@v4
     - name: Set up Elixir
-      uses: erlef/setup-beam@61e01a43a562a89bfc54c7f9a378ff67b03e4a21 # v1.16.0
+      uses: erlef/setup-beam@v1
       with:
         elixir-version: ${{ matrix.elixir }} # [Required] Define the Elixir version
         otp-version: ${{ matrix.otp }}      # [Required] Define the Erlang/OTP version
